gccida/c0/doing_eh
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/doing_eh/src/except.c:840:7: error: use of undeclared identifier 'doing_eh_warned'
if ( !doing_eh_warned && do_warn ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/doing_eh/src/except.c:843:1: error: use of undeclared identifier 'doing_eh_warned'
doing_eh_warned = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/doing_eh/src/obj/except.o] Error 1
